--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@
     text-decoration: none;
     font-family: 'Nanum Gothic', sans-serif;
     font-size: 20px;
-    color: rgb(37, 35, 35);
+    color: #262626
     border: 1px solid rgb(59, 56, 56);
     justify-content: center;
     border-radius: 10px;
@@ -89,8 +89,8 @@
 }
 
 .verified_dummy .link_2 {
-    color: rgb(223, 215, 215);
-    border: 1px solid rgb(223, 215, 215);
+    color: #dfd7d7;
+    border: 1px solid #dfd7d7;
 }
 
 .block_3 {
@@ -112,7 +112,7 @@
 
 .designed_by .ali_sayed {
     font-weight: 900;
-    color: rgb(236, 230, 230);
+    color: #ece6e6;
 }
 
 .designed_by h5 {
@@ -130,23 +130,25 @@
     padding: 3% 0% 0% 4%;
 }
 
+
 .say_hello input {
     background: none;
     font-family: 'Nanum Gothic', sans-serif;
     font-size: 18px;
     border-radius: 12px;
-    color: white;
+    color: #ffffff;
     padding: 2% 10% 2% 3%;
-    margin: 1% 1% 1% 0;
+    margin: 1% 1% 1.5% 0;
 }
 
 .say_hello textarea {
+    width: 70%;
     background: none;
     font-family: 'Nanum Gothic', sans-serif;
     font-size: 18px;
     border-radius: 12px;
-    color: white;
-    padding: 2% 36% 0 2%; 
+    color: #ffffff;
+    padding: 2%; 
     margin-bottom: 14%;
 }
 
@@ -176,7 +178,7 @@
 }
 
 .main .white_text {
-    color: rgb(236, 230, 230);
+    color: #ece6e6;
 }
 
 .second_half .link_1:hover {
